--- a/scss/utilities/_placeholders.scss
+++ b/scss/utilities/_placeholders.scss
@@ -1,1 +1,6 @@
 // Create a placeholder for one of the following: Links, Images or Nav Items
+
+%link-prop {
+    color: $malibu;
+    font-weight: $font-weight--bold;
+}
