--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -10,7 +10,8 @@
         @include border-radius(5px);
         text-align: center;
         padding: em(8px) em(25px);
-        margin: em(8px) em(16px);
+        margin: em(8px);
+        margin-left: em(8px);
         }
 }
 
@@ -24,7 +25,7 @@
     margin-right: -8em;
   }
   
-  @media (min-width: 769px) {
+  @include mq(medium) {
     .nav a:hover {
       padding: 1rem 1rem;
       margin: 1rem -1rem;
